# TradeStream

./: CMakeLists.txt  README.md  file.csv  file1.csv  input.csv  main.cpp  output10.csv  outputfloat.csv
Agg/: Agg.hpp
AggStreamer/: AggStreamer.hpp
DataStore/: DataStore.hpp
FileHandle/: CSVFileHandle.hpp  FileHandle.hpp
Serializer/: ChunkLenSerializer.hpp  Serializer.hpp
TradeStreamer/: TradeStreamer.hpp
ZMQHandle/: TCPZMQHandle.hpp  ZMQHandle.hpp
ZMQHandleFactory/: ZMQHandleFactory.hpp
